# encrypt_file

./: Cargo.toml  example_json_txt_file_to_encrypt
encrypted_files/: 2411e828-e8ef-497d-ab8e-e5442e4c6974  31971f01-6a1d-4c82-9467-7af07a45a665  e64bf302-e569-452a-81cb-e23e117a68ab  encrypted_file
public_key/: pk
secret_key/: sk
src/: aws_s3.rs  encrypt.rs  main.rs  write_file.rs
