[package]
name = "encrypt_file"
version = "0.1.0"
authors = ["Ivy Seo <ivy.rice.seo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sodiumoxide = "0.2.5"
libsodium-sys = "0.2.5"

uuid = { version = "0.8", features = ["serde", "v4"] }

anyhow = "1.0.31"
base64 = "0.12.1"
libc = "0.2.71"

#AWS SDK for Rust:
rust-s3 = "0.8.0"